--- a/src/style.css
+++ b/src/style.css
@@ -1,15 +1,20 @@
 body{
     margin: 0;
     font-family:'Karla', sans-serif;
+    display: flex;
+    justify-content: center;
 }
 .container{
+    margin: 20px 0px;
+    border-radius: 30px;
     padding: 30px 15px;
     background-color: #0B2434;
     box-sizing: border-box;
+    width: 600px;
 }
 .content{
     background-color: #F5F5F5;
-    height: 91vh;
+    height: 80vh;
     border-radius: 30px;
     padding: 20px ;
     display: flex;
@@ -17,17 +22,27 @@ body{
     justify-content: space-around;
     align-items: center;
 }
-
-
+.heading{
+    margin-top: 10px;
+    font-size: 3rem;
+    margin-bottom: 0px;
+}
+.subtext{
+    margin-top: -20px;
+    font-size: 1.4rem;
+    text-align: center;
+    color: #4A4E74;
+    font-weight: 400;
+}
 .diceContainer{
         display: grid;
         grid-template: auto auto / repeat(5, 1fr);
-        gap: 40px 80px;
+        gap: 30px 30px;
     }
 
 .diceFace{
-    height: 90px;
-    width: 90px;
+    height: 70px;
+    width: 70px;
     box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.15);
     border-radius: 10px;
     display: flex;
@@ -38,19 +53,20 @@ body{
 }
 .die1{
     font-weight: 800;
-    font-size: 3rem;
+    font-size: 2rem;
 }
 .roll-dice {
-    height: 70px;
-    width: 200px;
+    margin-top: 20px;
+    height: 60px;
+    width: 155px;
     border: none;
     border-radius: 6px;
     background-color: #5035FF;
     color: white;
-    font-size: 2rem;
+    font-weight: 550;
+    font-size: 1.7rem;
     font-family: 'Karla', sans-serif;
     cursor: pointer;
-    /* letter-spacing: 5px; */
 }
 
 .roll-dice:focus {
@@ -58,5 +74,5 @@ body{
 }
 
 .roll-dice:active {
-    transform: scale(1.01);
+    transform: scale(2);
 }
