--- a/tenzies-game/src/style.css
+++ b/tenzies-game/src/style.css
@@ -10,7 +10,7 @@ body{
     padding: 30px 15px;
     background-color: #0B2434;
     box-sizing: border-box;
-    width: 600px;
+    max-width: 600px;
 }
 .content{
     background-color: #F5F5F5;
@@ -38,6 +38,7 @@ body{
         display: grid;
         grid-template: auto auto / repeat(5, 1fr);
         gap: 30px 30px;
+        padding: 0px;
     }
 
 .diceFace{
@@ -58,7 +59,7 @@ body{
 .roll-dice {
     margin-top: 20px;
     height: 60px;
-    width: 155px;
+    width: 200px;
     border: none;
     border-radius: 6px;
     background-color: #5035FF;
@@ -75,4 +76,20 @@ body{
 
 .roll-dice:active {
     transform: scale(1.1);
+}
+
+@media (max-width : 1100px){
+    .diceContainer{
+        gap: 20px 20px;
+    }
+    .diceFace{
+        width: 45px;
+        height: 45px;
+    }
+    .die1{
+        font-size: 1.5rem;
+    }
+    /* .content{
+        height: 50vh;
+    } */
 }
